--- a/Tanks in SFML.cbp
+++ b/Tanks in SFML.cbp
@@ -11,17 +11,20 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="sfml_1_" />
+				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Tanks in SFML" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="sfml_1_" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -31,6 +34,16 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Map1" />
+		<Unit filename="include/Bullet.h" />
+		<Unit filename="include/Map.h" />
+		<Unit filename="include/Tank.h" />
+		<Unit filename="include/Utils.h" />
+		<Unit filename="main.cpp" />
+		<Unit filename="src/Bullet.cpp" />
+		<Unit filename="src/Map.cpp" />
+		<Unit filename="src/Tank.cpp" />
+		<Unit filename="src/Utils.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
