Map Editor works 9/11

--- a/Tanks in SFML.cbp
+++ b/Tanks in SFML.cbp
@@ -42,6 +42,8 @@
 		<Unit filename="include/Bullet.h" />
 		<Unit filename="include/MainMenu.h" />
 		<Unit filename="include/Map.h" />
+		<Unit filename="include/MapSelector.h" />
+		<Unit filename="include/Scene.h" />
 		<Unit filename="include/Tank.h" />
 		<Unit filename="include/Utils.h" />
 		<Unit filename="main.cpp" />
@@ -52,6 +54,8 @@
 		<Unit filename="src/Bullet.cpp" />
 		<Unit filename="src/MainMenu.cpp" />
 		<Unit filename="src/Map.cpp" />
+		<Unit filename="src/MapSelector.cpp" />
+		<Unit filename="src/Scene.cpp" />
 		<Unit filename="src/Tank.cpp" />
 		<Unit filename="src/Utils.cpp" />
 		<Extensions>
